# Design-Patterns-Final

./: .env  README.md  constants.py  database.db  notebookdf63c57883.ipynb  pyproject.toml
app/core/: Repository.py  buyn_getn_handler.py  campaign.py  campain_handler.py  combo_handler.py  constants.py  discount_handler.py  none_campaign_handler.py  product.py  receipt.py  repository.py  shift.py  xreport.py
app/core/campaign/: buyn_getn_handler.py  campaign.py  campaign_factory.py  campain_handler.py  combo_handler.py  discount_handler.py  none_campaign_handler.py  xreport.py
app/infra/: in_memory.py  sqlite.py
app/infra/api/: campaign_api.py  products.py  receipt_api.py  sales.py  shift_api.py  xreport.py
app/runner/: setup.py
app/schemas/: campaign.py  product.py  receipt.py  sales.py
app/services/: campaign_service.py  product_service.py  receipt_service.py  shift_service.py  xreport_service.py
tests/: campaign_api_test.py  campaign_service_tests.py  campaign_tests.py  conftest.py  conftests.py  database.db  product_api_tests.py  receipt_api_tests.py  receipt_service_tests.py  shift_api_tests.py  shift_service_tests.py  sqlite_tests.py  test_product.py  xreport_test.py
